1.Вывод данных нового поля во фронтенд и CSS к нему. 2. Добавление опции при активации плагина testme_show_test_description_2 = yes. 3. В настройках плагина вывод нового checkbox "Показывать описание теста №2 перед списком вопросов".

--- a/testme_style.css
+++ b/testme_style.css
@@ -48,7 +48,8 @@ padding-bottom: 20px;
 }
 
 /*Описание перед тестом*/
-.testme_show_test_description{
+.testme_show_test_description,
+.testme_show_test_description_2{
 
 margin-bottom:30px;
 line-height: 30px;
@@ -200,7 +201,8 @@ background:#6ad2f4;
         margin-top: 3px;
 }
 
-.testme_show_test_description > p {
+.testme_show_test_description > p,
+.testme_show_test_description_2 > p {
     background-color: #FBFBFB;
     border: 1px solid #ccc;
     border-radius: 0px;
