--- a/testme_style_admin.css
+++ b/testme_style_admin.css
@@ -22,6 +22,11 @@
 	border-top: 2px solid #c5d2d8;
 }
 
+.testme_edit_one span.testme-icons-edit{
+	position: relative;
+	bottom: -9px;
+}
+
 .testme_edit_menu {
 	width:185px;
 	float:left;
